Stop sidebar from shifting down a whole bunc hon the calendar page

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -12,7 +12,7 @@
     min-height: 100%;
 }
 .mainLogo{
-    flex: 15%;
+    /* flex: 15%; */
     /* margin: 1em; */
     width: 50%;
 }
